--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                         </div>
                         <h1 class="b-h1"> So werden Sie Krampfadern los: Dieses im Fernsehen nie besprochene Mittel hat
                             mir geholfen </h1>
-                        <div class="b-icon-box"><span class="b-data"><img class="b-icon" src="img/icon_commetnt.svg"> 14
-                            </span><span class="b-data"><img class="b-icon" src="img/icon_eye.svg"> 1120 </span></div>
-                        <div class="b-img-box"><img class="b-img" src="img/img_1_a.jpg"><img class="b-img"
-                                src="img/img_1_b.jpg"></div>
+                        <div class="b-icon-box"><span class="b-data"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-icon" src="img/icon_commetnt.svg"></a> 14
+                            </span><span class="b-data"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-icon" src="img/icon_eye.svg"></a> 1120 </span></div>
+                        <div class="b-img-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img" src="img/img_1_a.jpg"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img"
+                                src="img/img_1_b.jpg"></a></div>
                         <p class="b-p"> Alles begann mit gutartigen vergrößerten Venen, die in den ersten Monaten meiner
                             Schwangerschaft auftraten. Mein Bauch wuchs ebenso wie mein Gewicht. Ehrlich gesagt habe ich
                             mit nur 20 Kilogramm nicht einmal so viel zugenommen. Das zusätzliche Gewicht machte es mir
                             schwer, mich körperlich zu betätigen. Meine Beine schmerzten und schwollen an. Kurz vor der
                             Geburt waren meine Beine komplett mit blauen Venen übersät, sodass man sogar Drei gewinnt
                             darauf spielen konnte. </p>
-                        <div class="b-img-box"><img class="b-img" src="img/img_2_a.jpg"><img class="b-img"
-                                src="img/img_2_b.jpg"></div>
+                        <div class="b-img-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img" src="img/img_2_a.jpg"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img"
+                                src="img/img_2_b.jpg"></a></div>
                         <p class="b-p"> Mein Arzt sagte mir, dass die Hälfte der schwangeren Frauen am Ende Krampfadern
                             entwickeln. So funktioniert wohl der weibliche Körperbau. Die Salbe, die er mir empfahl,
                             half kaum. Sie hat kaum gewirkt. Die engen Strümpfe linderten die Schmerzen ein wenig, aber
@@ -118,8 +118,8 @@
                         <p class="b-p"> Inzwischen ist kein einziger Rock mehr in meinem Kleiderschrank, obwohl ich
                             problemlos in jeden Minirock passe (ich habe dank guter Gene und eines aktiven Sohnes
                             schnell wieder mein Normalgewicht erreicht). Es war mir wirklich peinlich, dass meine Beine
-                            mit blauen Knoten und Beulen übersät waren. Daher versteckte ich sie mit Hosen. </p><img
-                            class="b-img" src="img/img_3.jpg">
+                            mit blauen Knoten und Beulen übersät waren. Daher versteckte ich sie mit Hosen. </p><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img
+                            class="b-img" src="img/img_3.jpg"></a>
                         <p class="b-p"> Wie erwartet konnten mir die Kliniken nicht helfen. Ich habe mich absolut gehen
                             lassen... Meine Venen waren in einem schlechten Zustand. Der Arzt sagte, ich müsse im
                             Krankenhaus bleiben und die Krampfadern operativ entfernen lassen. Sie hofften, dass es nach
@@ -142,8 +142,8 @@
                             <a class="b-link" href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"> Veniselle </a> . Ich habe sie bestellt und es
                             hat sich gelohnt! Die alte Frau hatte Recht!
                         </h2>
-                        <div class="b-img-box"><img class="b-img" src="img/img_4_a.jpg"><img class="b-img"
-                                src="img/img_4_b.jpg"></div>
+                        <div class="b-img-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img" src="img/img_4_a.jpg"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img"
+                                src="img/img_4_b.jpg"></a></div>
                         <p class="b-p"> Nach nur 2 Tagen mit <a class="b-link" href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"> Veniselle </a>
                             fühlte ich, dass sich etwas an meinen Beinen tat. Es ist schwierig zu beschreiben. Ich
                             fühlte überall Gänsehaut und die Schwellungen verschwanden. </p>
@@ -151,12 +151,12 @@
                             meine Krampfadern ausübte. Meine Beine fühlten sich nicht mehr schwer an und es wurde viel
                             einfacher, sich zu bewegen. Ich konnte so schnell laufen, dass es sich anfühlte, als würde
                             ich fliegen. </p>
-                        <div class="b-img-box"><img class="b-img" src="img/img_5_a.jpg"><img class="b-img"
-                                src="img/img_5_b.jpg"></div>
+                        <div class="b-img-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img" src="img/img_5_a.jpg"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img"
+                                src="img/img_5_b.jpg"></a></div>
                         <p class="b-p"> Ich verbrachte viel Zeit mit meinem Sohn im Park, was wir beide sehr genossen.
                             Wir konnten den ganzen Tag spielen, sogar bis in den späten Abend hinein! </p>
-                        <div class="b-img-box"><img class="b-img" src="img/img_6_a.jpg"><img class="b-img"
-                                src="img/img_6_b.jpg"></div>
+                        <div class="b-img-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img" src="img/img_6_a.jpg"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-img"
+                                src="img/img_6_b.jpg"></a></div>
                         <p class="b-p"> Ich kann nicht behaupten, dass die Creme schnell wirkt, aber sie wirkt. Diese
                             Creme hat mir geholfen, meine Beine zu heilen. Die Krampfadern verschwanden und meine Adern
                             hellten sich auf. Die Krampfadern sind verschwunden und ich kann wieder Miniröcke und
@@ -171,10 +171,10 @@
                         <p class="b-p"> Ich hoffe, meine Situation kann als klares Beispiel dafür dienen, dass die
                             Gesundheit nicht ignoriert werden sollte. Ich habe keine Ahnung, wie schwer die Krankheit
                             werden kann, aber ich beschloss, meine Geschichte trotzdem zu teilen. </p>
-                        <div class="b-product-box"><img class="b-product-bg b1" src="img/leners.png"><img
-                                class="b-product-bg b2" src="img/leners.png">
+                        <div class="b-product-box"><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-product-bg b1" src="img/leners.png"></a><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img
+                                class="b-product-bg b2" src="img/leners.png"></a>
                             <h4 class="b-product-h"> Veniselle <span class="smal"> Mit Rabatt <span class="red"> -50%
-                                    </span></span></h4><img class="b-product" src="img/product.png">
+                                    </span></span></h4><a href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"><img class="b-product" src="img/product.png"></a>
                             <p class="b-product-p"> *Mit einer Bestellung auf der offiziellen Website garantieren Sie
                                 sich ein Standardprodukt mit hochwertigen Zutaten. </p><a class="b-button"
                                 href="https://uh9427579cuh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdFPwQDyIMABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=98741&ap=-1"> Bestellen </a>
